--- a/webscraping-beautifulsoup.ipynb
+++ b/webscraping-beautifulsoup.ipynb
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +1002,13 @@
       ", <td><a href=\"/wiki/Falcon_9_Full_Thrust\" title=\"Falcon 9 Full Thrust\">F9 FT</a><br/>B1025.1<sup class=\"reference\" id=\"cite_ref-nsf-20170425_136-1\"><a href=\"#cite_note-nsf-20170425-136\">[129]</a></sup>\n",
       "</td>\n",
       ", <td><a href=\"/wiki/NASA\" title=\"NASA\">NASA</a> (<a href=\"/wiki/Commercial_Resupply_Services\" title=\"Commercial Resupply Services\">CRS</a>)\n",
-      "</td>\n",
+      "</td>\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "=====> flight_number 28 and flag True\n",
       "=====> ***28***   \n",
       "<td>14 August 2016,<br/>05:26\n",
@@ -1106,7 +1112,7 @@
       "</td>\n",
       ", <td><a href=\"/wiki/Falcon_9_Full_Thrust\" title=\"Falcon 9 Full Thrust\">F9 FT</a><br/>B1038.1<sup class=\"reference\" id=\"cite_ref-nsf-20170819_217-0\"><a href=\"#cite_note-nsf-20170819-217\">[209]</a></sup>\n",
       "</td>\n",
-      ", <td><a href=\"/wiki/National_Space_Organization\" title=\"National Space Organization\">NSPO</a>\n",
+      ", <td><a class=\"mw-redirect\" href=\"/wiki/National_Space_Organization\" title=\"National Space Organization\">NSPO</a>\n",
       "</td>\n",
       "=====> flight_number 41 and flag True\n",
       "=====> ***41***   \n",
@@ -1634,7 +1640,13 @@
       "</td>\n",
       ", <td><a href=\"/wiki/National_Reconnaissance_Office\" title=\"National Reconnaissance Office\">NRO</a>\n",
       "</td>\n",
-      "=====> flight_number 104 and flag True\n",
+      "=====> flight_number 104 and flag True\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "=====> ***104***   \n",
       "<td>8 January 2021<br/>02:15<sup class=\"reference\" id=\"cite_ref-616\"><a href=\"#cite_note-616\">[604]</a></sup>\n",
       "</td>\n",
@@ -1876,7 +1888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1906,7 +1918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1952,7 +1964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1961,7 +1973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2073,7 +2085,7 @@
        "freq              120              26              80            1      3  "
       ]
      },
-     "execution_count": 122,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2084,7 +2096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2129,7 +2141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2170,7 +2182,7 @@
        "Name: Customer, dtype: object"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2184,7 +2196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2239,7 +2251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2799,7 +2811,7 @@
        "120         Success       6 June 2021     04:26  "
       ]
      },
-     "execution_count": 126,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
