--- a/SpaceX_data_wrangling_lab_Wk1.ipynb
+++ b/SpaceX_data_wrangling_lab_Wk1.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
        "9            0  B1011  -80.577366  28.561857  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
        "Name: LaunchSite, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
        "Name: Orbit, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +816,7 @@
      "output_type": "stream",
      "text": [
       "<class 'set'> \n",
-      " {'None None', 'False ASDS', 'False Ocean', 'None ASDS', 'False RTLS'}\n"
+      " {'False ASDS', 'None None', 'False Ocean', 'None ASDS', 'False RTLS'}\n"
      ]
     }
    ],
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +857,7 @@
       "6    False\n",
       "7    False\n",
       "Name: Outcome, dtype: bool \n",
-      " [1, 1, 1, 1, 1, 1, 0, 0]\n",
+      " [0, 0, 0, 0, 0, 0, 1, 1]\n",
       "<class 'list'> <class 'int'>\n"
      ]
     }
@@ -867,7 +867,7 @@
     "# landing_class = 1 otherwise\n",
     "x = df['Outcome'].isin(bad_outcomes)\n",
     "#landing_class = list\n",
-    "landing_class = [int(a) for a in x]\n",
+    "landing_class = [(1-int(a)) for a in x]\n",
     "print(x[0:8],'\\n',landing_class[0:8])\n",
     "print(type(landing_class),type(landing_class[0]))"
    ]
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -911,35 +911,35 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -947,17 +947,17 @@
       ],
       "text/plain": [
        "   Class\n",
-       "0      1\n",
-       "1      1\n",
-       "2      1\n",
-       "3      1\n",
-       "4      1\n",
-       "5      1\n",
-       "6      0\n",
-       "7      0"
+       "0      0\n",
+       "1      0\n",
+       "2      0\n",
+       "3      0\n",
+       "4      0\n",
+       "5      0\n",
+       "6      1\n",
+       "7      1"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1033,7 +1033,7 @@
        "      <td>B0003</td>\n",
        "      <td>-80.577366</td>\n",
        "      <td>28.561857</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1054,7 +1054,7 @@
        "      <td>B0005</td>\n",
        "      <td>-80.577366</td>\n",
        "      <td>28.561857</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1075,7 +1075,7 @@
        "      <td>B0007</td>\n",
        "      <td>-80.577366</td>\n",
        "      <td>28.561857</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1096,7 +1096,7 @@
        "      <td>B1003</td>\n",
        "      <td>-120.610829</td>\n",
        "      <td>34.632093</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1117,7 +1117,7 @@
        "      <td>B1004</td>\n",
        "      <td>-80.577366</td>\n",
        "      <td>28.561857</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -1138,7 +1138,7 @@
        "      <td>B1005</td>\n",
        "      <td>-80.577366</td>\n",
        "      <td>28.561857</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -1159,7 +1159,7 @@
        "      <td>B1006</td>\n",
        "      <td>-80.577366</td>\n",
        "      <td>28.561857</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -1180,7 +1180,7 @@
        "      <td>B1007</td>\n",
        "      <td>-80.577366</td>\n",
        "      <td>28.561857</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1208,17 +1208,17 @@
        "7   True Ocean        1     False   False   True        NaN    1.0   \n",
        "\n",
        "   ReusedCount Serial   Longitude   Latitude  Class  \n",
-       "0            0  B0003  -80.577366  28.561857      1  \n",
-       "1            0  B0005  -80.577366  28.561857      1  \n",
-       "2            0  B0007  -80.577366  28.561857      1  \n",
-       "3            0  B1003 -120.610829  34.632093      1  \n",
-       "4            0  B1004  -80.577366  28.561857      1  \n",
-       "5            0  B1005  -80.577366  28.561857      1  \n",
-       "6            0  B1006  -80.577366  28.561857      0  \n",
-       "7            0  B1007  -80.577366  28.561857      0  "
+       "0            0  B0003  -80.577366  28.561857      0  \n",
+       "1            0  B0005  -80.577366  28.561857      0  \n",
+       "2            0  B0007  -80.577366  28.561857      0  \n",
+       "3            0  B1003 -120.610829  34.632093      0  \n",
+       "4            0  B1004  -80.577366  28.561857      0  \n",
+       "5            0  B1005  -80.577366  28.561857      0  \n",
+       "6            0  B1006  -80.577366  28.561857      1  \n",
+       "7            0  B1007  -80.577366  28.561857      1  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1236,16 +1236,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.3333333333333333"
+       "0.6666666666666666"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1256,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1265,19 +1265,19 @@
        "0.6666666666666666"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# MY STUFF: overall succees rate:\n",
-    "(df.shape[0]-df[\"Class\"].sum())/df.shape[0]"
+    "# MY STUFF: overall success rate:\n",
+    "(df[\"Class\"].sum())/df.shape[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1285,12 +1285,12 @@
      "output_type": "stream",
      "text": [
       "LaunchSite    Class\n",
-      "CCAFS SLC 40  0        33\n",
-      "              1        22\n",
-      "KSC LC 39A    0        17\n",
-      "              1         5\n",
-      "VAFB SLC 4E   0        10\n",
-      "              1         3\n",
+      "CCAFS SLC 40  0        22\n",
+      "              1        33\n",
+      "KSC LC 39A    0         5\n",
+      "              1        17\n",
+      "VAFB SLC 4E   0         3\n",
+      "              1        10\n",
       "Name: Class, dtype: int64\n"
      ]
     }
@@ -1365,7 +1365,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1379,7 +1379,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
