small changes to some notebooks for final publication

--- a/SpaceX_data_wrangling_lab_Wk1.ipynb
+++ b/SpaceX_data_wrangling_lab_Wk1.ipynb
@@ -842,7 +842,9 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1277,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
