--- a/complete_the_EDA_with_SQL.ipynb
+++ b/complete_the_EDA_with_SQL.ipynb
@@ -200,45 +200,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * ibm_db_sa://tht47923:***@125f9f61-9715-46f9-9399-c8177b21803b.c1ogj3sd0tgtu0lqde00.databases.appdomain.cloud:30426/bludb\n",
-      "Done.\n"
+      "UsageError: Line magic function `%sql` not found.\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <tr>\n",
-       "        <th>launch_site</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>CCAFS LC-40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>CCAFS SLC-40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>KSC LC-39A</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>VAFB SLC-4E</td>\n",
-       "    </tr>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "[('CCAFS LC-40',), ('CCAFS SLC-40',), ('KSC LC-39A',), ('VAFB SLC-4E',)]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -514,7 +484,7 @@
    "source": [
     "%sql SELECT MIN(DATE) FROM SPACEX2 \\\n",
     "WHERE lcase(Landing_Outcome) like '%success%' \\\n",
-    "      OR lcase(Landing_Outcome) like '%ground pad%';"
+    "      AND lcase(Landing_Outcome) like '%ground pad%';"
    ]
   },
   {
